<resources>
    <string name="app_name">Lifepath</string>
    <string name="logo">Logo</string>
    <string name="lifepath">LifePath</string>
    <string name="todos_los_derechos_reservados_por_proyecto_discordia">Todos los derechos reservados por Proyecto DIscordia</string>
    <string name="discordia">Discordia</string>
    <string name="f">f</string>
    <string name="contrase_an">Contraseña</string>
    <string name="name">Name</string>
    <string name="jj">jj</string>
    <string name="usuario"> Usuario</string>
    <string name="contrase_a"> Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="nombre"> Nombre</string>
    <string name="edad"> Edad</string>
    <string name="registro">Registro</string>
    <string name="title_activity_aas">aas</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="copiar_el_texto">Copiar el texto</string>
    <string name="capturar">Capturar</string>
    <string name="copiar_el_texto">Copiar el texto</string>
    <string name="busca_una_etiqueta_para_escanear">Busca una etiqueta para escanear!</string>
</resources>