<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodFragment3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/contenedor_lineal"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/text_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/busca_una_etiqueta_para_escanear"
            android:textSize="24sp"
            android:textStyle="bold"/>
    </ScrollView>

    <LinearLayout
        android:id="@+id/contenedor_lineal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/boton_captura"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:text="@string/capturar"
            android:textColor="#00796B"
            android:visibility="visible"
            tools:visibility="visible" />

        <Button
            android:visibility="gone"
            android:id="@+id/boton_copiar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/copiar_el_texto"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</RelativeLayout>